fix firefox bug title not showing on homepage.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -482,6 +482,7 @@ footer {
   background-color: #333;
   background-size: cover;
   background-position: center;
+  position: sticky;
 }
 
 .slider {
